🐛 fix the image shift issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -63,33 +63,33 @@ h3 {
     height: $image-width;
     width: $image-width;
     position: absolute;
-    &:nth-child(1) {
-      z-index: -1;
-    }
-    &:nth-child(2) {
-      z-index: 20;
-    }
-    &:nth-child(3) {
-      z-index: 30;
-    }
-    &:nth-child(4) {
-      z-index: 40;
-    }
-    &:nth-child(5) {
-      z-index: 50;
-    }
-    &:nth-child(6) {
-      z-index: 60;
-    }
-    &:nth-child(7) {
-      z-index: 70;
-    }
-    &:nth-child(8) {
-      z-index: 80;
-    }
-    &:nth-child(9) {
-      z-index: 90;
-    }
+    //&:nth-child(1) {
+    //  z-index: -1;
+    //}
+    //&:nth-child(2) {
+    //  z-index: 20;
+    //}
+    //&:nth-child(3) {
+    //  z-index: 30;
+    //}
+    //&:nth-child(4) {
+    //  z-index: 40;
+    //}
+    //&:nth-child(5) {
+    //  z-index: 50;
+    //}
+    //&:nth-child(6) {
+    //  z-index: 60;
+    //}
+    //&:nth-child(7) {
+    //  z-index: 70;
+    //}
+    //&:nth-child(8) {
+    //  z-index: 80;
+    //}
+    //&:nth-child(9) {
+    //  z-index: 90;
+    //}
   }
 }
 
